@@ -2,6 +2,7 @@
 2017-11-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c: removed artificial limit for -fmax-errors
+	* cobc.c: added -O0 for disabling optimizations
 
 2017-11-13  Ron Norman <rjn@inglenet.com>
 
